# Schoolwork

./: README.md
cse20189/.svn/: entries
cse20189/final/: .__afsA1DB  FinalGrades.dvi  FinalGrades.tex  cchunt  eparse~  grading.pl  grading.pl~  grading.py  scripts.aux  scripts.dvi  scripts.tex~  switch.csv  switches.dvi  switches.tex  switches~
cse20189/hw1/: hw1.txt
cse20189/hw10/: League.pm  League.pm~  Team.pm  Team.pm~  baseball2.pl
cse20189/hw11/: fcalc.py~
cse20189/hw2/: bibliography.bib  bibliography.bib~  hw2.aux  hw2.bbl  hw2.blg  hw2.dvi  hw2.tex  resume.dvi  resume.tex~
cse20189/hw3/: hw3.dvi  hw3.tex  hw3.tex~  text.txt  text.txt~
cse20189/hw4/: filename.txt  hw4.aux  hw4.dvi  hw4.tex  messages
cse20189/hw5/: calc.csh  grade_script.csh  names
cse20189/hw6/: menu.sh  shellgame.sh
cse20189/hw8/: autools.tex  perlSnippets.dvi  perlSnippets.tex  problem3.dvi  problem3.tex
cse20189/hw8/rectangle-1.0/: Makefile  config.status  configure  configure.ac
cse20189/hw8/rectangle-1.0/src/: Makefile  Makefile.am  Makefile.in  rectangle
cse20189/hw9/: Player.pm~  Team.pm~  baseball.pl  portCount.pl
cse20189/midterm/: assessment.txt~
cse20211/FINAL/: game  game.c  game.c~
cse20211/lab1/: prog1.c  prog2  prog2.c  prog3  prog3.c  report.txt
cse20211/lab10/: desktop  final  final.c  final.c~  letters.c  letters.c~  letters.h  (+7 more)
cse20212/: .pub  .pub.pub  test.txt
cse30151/: nfa  nfa.py  nfa1.txt  nfa2-output.txt
cse30264/: Makefile  constants.h  network_connections.h  rendezvous_server  rendezvous_server.c  test_client  test_client.c
(+764 files in other folders)
